[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
"src" = "./src/bin/day1/main.rs"

[[bin]]
name = "day2"
"src" = "./src/bin/day2/main.rs"

[dependencies]
regex = "1"
once_cell = "1.18" 
